# rot_iar

./: .gitignore  CMakeLists.txt  README.md  load_code.sh  settings.json  tasks.json
.VSCodeCounter/2023-03-28_14-19-57/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
app/fsm_main_app/: CMakeLists.txt
app/fsm_main_app/inc/: fsm_main_app.h
app/fsm_main_app/src/: fsm_main_app.c
app/i2c_slave/: CMakeLists.txt
app/i2c_slave/inc/: i2c_slave.h
app/i2c_slave/src/: i2c_slave.c
app/limit_switch/: CMakeLists.txt
app/limit_switch/inc/: limit_switch.h
app/limit_switch/src/: limit_switch.c
app/pid_digital/: CMakeLists.txt
app/pid_digital/inc/: pid_digital.h
app/pid_digital/src/: pid_digital.c
app/pwm_control/: CMakeLists.txt
app/pwm_control/inc/: pwm_control.h
app/pwm_control/src/: pwm_control.c
app/quadrature_encoders/: CMakeLists.txt
app/quadrature_encoders/inc/: quadrature_encoders.h
app/quadrature_encoders/src/: quadrature_encoders.c
main/: CMakeLists.txt  main.c
